# large_point_cloud_preprocessing

./: .gitignore  CMakeLists.txt
include/: LargePointCloudPreprocessing.hpp
src/: LargePointCloudPreprocessing.cpp
tests/: ApplyAlignmentTest.cpp  ApplyCentralizationTest.cpp  ApplyCropBoxTest.cpp  ApplyCubeReescaleTest.cpp  ApplyNoiseAddTest.cpp  ApplyNormalEstimationTest.cpp  ApplyReescaleTest.cpp  ApplyStatisticalOutlierRemovalTest.cpp  ApplyVoxelGridTest.cpp
